# apps-menu-applet-for-cosmic

./: ATTRIBUTION.md  Cargo.toml  README.md  justfile
data/: dev.dominiccgeh.CosmicAppletAppsMenu.desktop
src/: config.rs  icon_cache.rs  main.rs  mouse_area_copy.rs  window.rs
