[package]
name = "cosmic-applet-apps-menu"
version = "0.1.5"
edition = "2021"

[dependencies]

  i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
  i18n-embed-fl = "0.8.0"
  rust-embed = "8.3.0"


  serde =  "1.0.197"


cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
    "libcosmic",
    "once_cell",
] }

libcosmic = { git = "https://github.com/pop-os/libcosmic", version = "0.1.0", default-features = false, features = ["applet", "tokio", "wayland", "desktop"] }
once_cell = "1.19.0"
freedesktop-desktop-entry = "0.5.1"
unicode-segmentation = "1.11.0"
notify = "6.1.1"
tokio = "1.36.0"
paste = "1.0.14"
lexical-sort = "0.3.1"
